# Guit

./: Cargo.toml  README.md
assets/: text.json
src/: command_parser.rs  command_sender.rs  guit.rs  main.rs
